# thread-to-speech

./: Makefile  README.md  pyproject.toml  requirements.txt
thread_to_speech/: thread_to_speech.py
